# babylon-60

./: .codecov.yml  .commitlintrc.yaml  .cortex_ast_dataset.json  .cursorrules  .env.example  .flake8  .gitignore  .gitmodules  .handoff_seal.json  .lintstagedrc  .pip-audit.toml  .pre-commit-config.yaml  .pytest_failures.txt  .secrets.baseline  .sentinel_ledger.json  .vercelignore  AGENTS.md  ARCHITECTURAL_AUDIT.md  ARCHITECTURE.md  AUDITORIA_SEGURIDAD_GITHUB.md  AUDIT_2026-02-23.md  AUTODIDACT_ACADEMY.md  AUTODIDACT_ADV-LLM-TOPOLOGY.md  AUTODIDACT_AGENTE_PRINCIPAL.md  AUTODIDACT_ALPHA_EXERGY_ISOMORPHISMS.md  AUTODIDACT_APEX.md  AUTODIDACT_BABYLON-60.md  AUTODIDACT_BAYESIAN_MECHANICS_SOTA.md  AUTODIDACT_BOUNTY_PRIMITIVES.md  AUTODIDACT_BRIDGES_ISOMORPHISMS.md  AUTODIDACT_CAP_THEOREM.md  AUTODIDACT_CAUSALIDAD.md  AUTODIDACT_COMPUTRONIO.md  AUTODIDACT_CWV_PERFORMANCE.md  AUTODIDACT_EDUCATIONAL_PRIMITIVES.md  AUTODIDACT_EXERGY_INFORMATION.md  AUTODIDACT_FABLE_5_BABYLON_60.md  AUTODIDACT_FABLE_BABYLON_MATRIX.md  AUTODIDACT_FALSIFIABLE_MEMORY.md  AUTODIDACT_FRAMEWORK_DAME.md  (+424 more)
.artifacts/: alma-md-concept.md  lore-md-concept.md  sovereign-agent-architecture.md  sovereign-evolution.md  sovereign-specification.md
.github/: CHANGELOG.md  CODEOWNERS  FUNDING.yml  METRICS.md  NOTES.md  SECURITY.md  STATUS.md  VERSION  dependabot.yml  mlc_config.json  pull_request_template.md
.husky/: pre-commit
.playwright-cli/: page-2026-03-28T04-18-08-400Z.yml  page-2026-03-28T04-18-15-132Z.yml  page-2026-03-28T04-25-50-657Z.yml  (+6 more)
agent-runtime/rust-core/: Cargo.toml  Dockerfile  build.rs
agent-runtime/rust-core/src/: main.rs
agent-runtime/rust-core/src/ffi/: mod.rs  python_bridge.rs
agent-runtime/rust-core/src/memory/: event_store.rs
agent-runtime/rust-core/src/runtime/: action.rs  agent_loop.rs  mod.rs  safety.rs  scheduler.rs  state.rs
c5_workspace/: Cargo.toml  ai_goat_lexicon.yaml  goat_1_svd.py
c5_workspace/.github/workflows/: adversarial.yml  ci.yml
c5_workspace/crates/cortex_chaos/: Cargo.toml
c5_workspace/crates/cortex_chaos/src/: lib.rs
c5_workspace/crates/cortex_ffi/: Cargo.toml
c5_workspace/crates/cortex_ffi/src/: lib.rs
c5_workspace/crates/cortex_gateway/: Cargo.toml
c5_workspace/crates/cortex_gateway/src/: lib.rs  onnx_engine.rs  orthogonal_obfuscator.rs  sqlite_vec_engine.rs
c5_workspace/crates/cortex_hardware_stub/: Cargo.toml
c5_workspace/crates/cortex_hardware_stub/src/: lib.rs
c5_workspace/crates/cortex_ledger/: Cargo.toml
c5_workspace/crates/cortex_ledger/src/: lib.rs
c5_workspace/crates/cortex_replay/: Cargo.toml
c5_workspace/crates/cortex_replay/src/: lib.rs
c5_workspace/crates/cortex_replay/tests/: determinism.rs
c5_workspace/crates/cortex_rs/: Cargo.toml
c5_workspace/crates/cortex_rs/src/: lib.rs
c5_workspace/crates/cortex_rs/tests/: adversarial.rs
c5_workspace/crates/cortex_types/: Cargo.toml
c5_workspace/crates/cortex_types/src/: lib.rs
c5_workspace/crates/cortex_wasm/: Cargo.toml
c5_workspace/crates/cortex_wasm/src/: lib.rs
c5_workspace/crates/cortex_zk/: Cargo.toml
c5_workspace/crates/cortex_zk/src/: lib.rs
c5_workspace/fuzz/: Cargo.toml
c5_workspace/fuzz/fuzz_targets/: ffi_submit.rs  ledger_append.rs
cortex-hypervisor/: Cargo.toml
cortex-hypervisor/src/: main.rs
cortex-hypervisor/src/models/: belief.rs  mod.rs
cortex-hypervisor/src/storage/: episodic.rs  mod.rs
cortex-rust/: Cargo.toml
cortex-rust/src/: lib.rs
cortex-sdk/: README.md  pyproject.toml
cortex-sdk/cortex_persist/: __init__.py  async_client.py  client.py  exceptions.py  models.py
cortex_core_rs/: Cargo.toml
cortex_core_rs/src/: ast.rs  fixed60.rs  lib.rs  logger.rs  merkle.rs  shim.rs
cortex_mev_base/: Cargo.toml  foundry.toml
cortex_mev_base/cache/: solidity-files-cache.json
cortex_mev_base/contracts/: BaseStrike.huff
cortex_mev_base/lib/forge-std/: CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md
cortex_mev_base/lib/forge-std/scripts/: vm.py
cortex_mev_base/src/: alloy_client.rs  main.rs  types.rs
cortex_mev_base/test/: BaseStrike.t.sol
cortex_rs/: Cargo.toml  __init__.py  __init__.pyi
cortex_rs/benches/: vault_benchmark.rs
cortex_rs/docs/tla/: WAL_Async.cfg  WAL_Async.tla
cortex_rs/src/: ZeroCopyRingBuffer.cfg  ZeroCopyRingBuffer.tla  antilimerence.rs  ast_hash.rs  atms.rs  auth.rs  autocurative.rs  babylon.rs  belief_object.rs  belief_scheduler.rs  conjecturer.rs  crdt_logop.rs  crdt_merge.rs  ctre_guardian.rs  curriculum.rs  edg.rs  event_schema.rs  ffi.rs  hash_chain.rs  inverse_engine.rs  isa.rs  lib.rs  logop.rs  mcp.rs  mtk_core.rs  mutator.rs  oracle.rs  ouroboros_compiler.rs  probabilistic_crdt.rs  py_accumulator.rs  py_inverse.rs  py_stream.rs  py_wasm.rs  replay.rs  scene_model.rs  se_crdt.rs  smt.rs  smt_compiler.rs  storage_guard.rs  telemetry.rs  (+7 more)
cortex_rs/src/bft/: exergy.rs  mod.rs
cortex_rs/src/causal/: solver.rs
cortex_rs/src/epistemic/: mod.rs  vaccine.rs
cortex_rs/src/mee/: event.rs  ffi.rs  ledger.rs  mod.rs  proof.rs  runtime.rs  state.rs
cortex_rs/src/reality/: adversarial_fuzzing.rs  claim.rs  mod.rs  reader.rs  registry.rs  scorer.rs  swarm_sync.rs  validator.rs  writer.rs
cortex_rs/src/retrieval/: vaccine.rs
cortex_rs/tests/: adversarial.rs  replay_universe.rs  test_babylon.rs  test_mee_causality.rs
crates/bounty-hunter/: Cargo.toml
crates/bounty-hunter/src/: fuzz.rs  main.rs  probe.rs  recon.rs  report.rs
crates/cortex-core/: Cargo.toml
crates/cortex-core/benches/: core_bench.rs
crates/cortex-core/src/: canonical.rs  crypto.rs  lib.rs  merkle.rs
crates/ouroboros-stream/: Cargo.toml
crates/ouroboros-stream/src/: main.rs
engine-rs/: Cargo.toml  pyproject.toml
engine-rs/src/: lib.rs  main.rs  smte.rs
experimental/dashboard_legacy/engine/artemis-omega/: Cargo.toml
open-cortex/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
open-cortex/open_cortex/: __init__.py  app.py  config.py  metrics.py  models.py  persistence.py  router.py  seed.py
open-cortex/tests/: test_persistence.py
sdk/cortex-persist-mtk/: README.md  pyproject.toml
(+12206 files in other folders)
