[project]
name = "cortex-persist"
version = "0.3.0b2"
description = "Tamper-evident audit and decision lineage for AI systems — cryptographic verification, integrity proofs, and traceability for agent memory."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "borjamoskv.com", email = "borja@moskv.com"},
]
keywords = [
    "ai", "memory", "agents", "trust", "compliance",
    "eu-ai-act", "cryptographic-ledger", "audit-trail",
    "vector-search", "sqlite", "mcp", "multi-tenant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: Database",
    "Typing :: Typed",
]

dependencies = [
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0",
    "onnxruntime>=1.17",
    "click>=8.0",
    "rich>=13.0",
    "aiosqlite>=0.20.0",
    "pyobjc-core; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
    "keyring>=25.7.0",
    "cryptography>=46.0.5",
    "watchdog>=6.0.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://cortexpersist.com"
Documentation = "https://cortexpersist.dev"
Repository = "https://github.com/borjamoskv/cortex"
Issues = "https://github.com/borjamoskv/cortex/issues"
Changelog = "https://github.com/borjamoskv/cortex/releases"
[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio",
    "httpx>=0.27",
    "z3-solver>=4.13.0",
]
adk = [
    "google-adk>=0.5.0",
]
toolbox = [
    "toolbox-core>=0.1.0",
]
billing = [
    "stripe>=8.0",
]
cloud = [
    "asyncpg>=0.29",
    "redis>=5.0",
    "qdrant-client>=1.9",
]
trends = [
    "pytrends>=4.9",
    "pandas>=2.0",
]
all = [
    "cortex-persist[api,dev,adk,toolbox,billing,cloud,trends]",
]

[project.scripts]
cortex = "cortex.cli:cli"
moskv-daemon = "cortex.daemon_cli:main"
cortex-adk = "cortex.adk.runner:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cortex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["experimental", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "G"]
ignore = ["E501", "E402", "B008", "W291", "W293", "S", "BLE001", "UP045"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "E402", "F821", "BLE001", "T20", "B017"]
"open-cortex/tests/**/*.py" = ["S", "E402", "F821", "BLE001", "T20"]
"scripts/**/*.py" = ["S", "T20"]
"sdks/**/*.py" = ["S", "T20"]
"cortex/**/__init__.py" = ["F401"]
"cortex/cli/__init__.py" = ["F401", "E402"]
"cortex/daemon/core.py" = ["E701", "E702", "I001"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "tests",
    "experimental",
    "cortex/moltbook",
    "scripts"
]
reportMissingImports = "warning"
reportPrivateImportUsage = "none"
