[project]
name = "cortex-persist"
version = "0.3.0b2"
description = "Tamper-evident audit and decision lineage for AI systems — cryptographic verification, integrity proofs, and traceability for agent memory."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "borjamoskv", email = "borjamoskv@gmail.com"},
]
keywords = [
    "ai", "memory", "agents", "trust", "compliance",
    "eu-ai-act", "cryptographic-ledger", "audit-trail",
    "vector-search", "sqlite", "mcp", "multi-tenant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: Database",
    "Typing :: Typed",
]

dependencies = [
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.1.1", # for security and fixes
    "onnxruntime>=1.18",
    "click>=8.1.8",
    "rich>=13.9.4",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.0",
    "aiohttp>=3.13.3",
    "pyobjc-core; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
    "keyring>=25.7.0",
    "cryptography>=46.0.5",
    "watchdog>=6.0.0",
    "pydantic[email]>=2.10.0", # latest stable features
]

[project.urls]
Homepage = "https://cortexpersist.com"
Documentation = "https://cortexpersist.dev"
Repository = "https://github.com/borjamoskv/Cortex-Persist"
Issues = "https://github.com/borjamoskv/Cortex-Persist/issues"
Changelog = "https://github.com/borjamoskv/Cortex-Persist/releases"
[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "starlette>=0.47.2", # explicitly for safety
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28",
    "python-multipart>=0.0.22", # explicitly for safety
]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28",
    "z3-solver>=4.13.0",
    "pip-audit>=2.8.0",
    "ruff>=0.15.6",
]
adk = [
    "google-adk>=0.5.0",
]
toolbox = [
    "toolbox-core>=0.1.0",
]
billing = [
    "stripe>=8.0",
]
cloud = [
    "asyncpg>=0.29",
    "redis>=5.0",
    "qdrant-client>=1.9",
]
trends = [
    "pytrends>=4.9",
    "pandas>=2.0",
]
all = [
    "cortex-persist[api,dev,adk,toolbox,billing,cloud,trends,scraper,llm,observability,ui]",
]
scraper = [
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
]
llm = [
    "openai>=1.0",
    "mlx-lm>=0.21.0; sys_platform == 'darwin'",
]
observability = [
    "structlog>=24.0",
]
ui = [
    "psutil>=5.9",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices; sys_platform == 'darwin'",
]

[project.scripts]
cortex = "cortex.cli:cli"
moskv-daemon = "cortex.daemon_cli:main"
cortex-adk = "cortex.adk.runner:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cortex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]


[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["experimental", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "G"]
ignore = ["E501", "E402", "B008", "W291", "W293", "S", "BLE001", "UP045"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "E402", "F821", "BLE001", "T20", "B017"]
"open-cortex/tests/**/*.py" = ["S", "E402", "F821", "BLE001", "T20"]
"scripts/**/*.py" = ["S", "T20"]
"sdks/**/*.py" = ["S", "T20"]
"cortex/**/__init__.py" = ["F401"]
"cortex/cli/__init__.py" = ["F401", "E402"]
"cortex/daemon/core.py" = ["E701", "E702", "I001"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "tests",
    "experimental",
    "cortex/moltbook",
    "scripts"
]
reportMissingImports = "warning"
reportPrivateImportUsage = "none"
