[project]
name = "cortex-persist"
version = "1.0.0"
description = "Cryptographic memory integrity, audit trails, and verifiable lineage for AI agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "borjamoskv.com", email = "borja@moskv.com"},
]
keywords = [
    "ai", "memory", "agents", "trust", "compliance",
    "eu-ai-act", "cryptographic-ledger", "audit-trail",
    "vector-search", "sqlite", "mcp", "multi-tenant",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: Database",
    "Typing :: Typed",
]

dependencies = [
    "sqlite-vec>=0.1.6",
    "click>=8.0",
    "rich>=13.0",
    "aiosqlite>=0.20.0",
    "cryptography>=46.0.7",
    "pydantic>=2.0",
    "prometheus_client>=0.20.0",
    "keyring>=25.7.0",
    "pyyaml>=6.0.3",
    "python-osc>=1.10.2",
    "radon>=6.0.1",
]

[project.urls]
Homepage = "https://cortexpersist.com"
Documentation = "https://github.com/borjamoskv/Cortex-Persist/tree/main/docs"
Repository = "https://github.com/borjamoskv/Cortex-Persist"
Issues = "https://github.com/borjamoskv/Cortex-Persist/issues"
Changelog = "https://github.com/borjamoskv/Cortex-Persist/releases"
[project.optional-dependencies]
compute = [
    "numpy",
]
secure = [
    "keyring>=25.7.0",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "sse-starlette>=0.10.3",
    "email-validator>=2.1.0",
]
mcp = [
    "mcp>=1.0",
    "aiohttp",
    "beautifulsoup4",
    "markdownify>=0.13",
    "watchdog>=6.0.0",
]
daemon = [
    "aiofiles",
    "aiohttp",
    "arq",
    "watchdog>=6.0.0",
]
platform = [
    "pyobjc-core; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
]
authoring = [
    "PyYAML>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.8.0",
    "httpx>=0.27",
    "ruff>=0.11.0",
    "z3-solver>=4.13.0",
]
adk = [
    "google-antigravity>=0.1.0",
]
toolbox = [
    "toolbox-core>=0.1.0",
]
billing = [
    "stripe>=8.0",
]
cloud = [
    "asyncpg>=0.29",
    "redis>=5.0",
    "qdrant-client>=1.9",
]
trends = [
    "pytrends>=4.9",
    "pandas>=2.0",
]
embeddings = [
    "sentence-transformers>=3.0",
    "onnxruntime>=1.17",
    "optimum[onnxruntime]>=1.17,<2.0.0",
]
knowledge = [
    "chromadb>=1.5.5",
]
acceleration = [
    "numba>=0.65.0",
]
all = [
    "cortex-persist[compute,secure,api,mcp,daemon,platform,authoring,dev,adk,toolbox,billing,cloud,trends,embeddings,knowledge,acceleration]",
]

[project.scripts]
cortex = "cortex.cli:cli"
moskv-daemon = "cortex.daemon_cli:main"
cortex-adk = "cortex.adk.runner:main"
cortex-mcp = "cortex.mcp.server:run_server"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cortex", "cortex.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--timeout=30"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests that exercise slower integration paths",
]


[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["experimental", "notebooks", "skills", "engine-c5", "bounty_hunt", "cortex_mev_base"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "G", "TID"]
ignore = ["E501", "E402", "B008", "W291", "W293", "S", "UP045", "TID251", "G004", "B904", "E701"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "E402", "F821", "BLE001", "T20", "B017", "TID251", "F401", "F841", "I001"]
"open-cortex/tests/**/*.py" = ["S", "E402", "F821", "BLE001", "T20"]
"scripts/**/*.py" = ["S", "T20"]
"sdks/**/*.py" = ["S", "T20"]
"cortex/**/__init__.py" = ["F401"]
"cortex/cli/__init__.py" = ["F401", "E402"]
"cortex/daemon/core.py" = ["E701", "E702", "I001"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"time.sleep" = { msg = "CORTEX Anti-Pattern: Usa asyncio.sleep() en este repositorio para no bloquear el event loop." }
"builtins.print" = { msg = "CORTEX Anti-Pattern: Usa standard logging o Rich para emitir trails de auditoría." }

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "tests",
    "experimental",
    "cortex/moltbook",
    "scripts",
    "cortex.agents",
    ".scratch",
    ".venv"
]
reportMissingImports = "warning"
reportPrivateImportUsage = "none"

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = [
    "experimental/",
    "tests/",
    "scripts/",
    "cortex_mev_base/",
]

[tool.bumpversion]
current_version = "1.0.0"
commit = true
tag = true
message = "chore(release): bump version {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "cortex/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
