[package]
name = "cortex-hypervisor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rocksdb = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
iceoryx2 = "0.4.0"
zenoh = "1.0.0-rc.3"
anyhow = "1.0.102"
tempfile = "3.27.0"
