[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cortex-persist"
version = "0.1.0"
description = "Python SDK for the CORTEX Memory API — persistent memory for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "MOSKV", email = "borja@moskv.com"}]
keywords = ["ai", "memory", "agents", "semantic-search", "cortex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://cortex.moskv.com"
Documentation = "https://docs.cortex.moskv.com"
Repository = "https://github.com/borjamoskv/cortex-persist"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-httpx"]
