[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cortex-persist-cloud"
version = "0.1.0"
description = "Python Cloud SDK for the hosted CORTEX Persist API"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "MOSKV", email = "borja@moskv.com"}]
keywords = ["ai", "memory", "agents", "semantic-search", "cortex", "cloud-sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://cortexpersist.com"
Documentation = "https://github.com/borjamoskv/Cortex-Persist/tree/main/cortex-sdk"
Repository = "https://github.com/borjamoskv/Cortex-Persist"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-httpx"]
