[package]
name = "cortex_rs"
version = "1.0.0"
edition = "2021"

[lib]
name = "cortex_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py310"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.12.3"
once_cell = "1.21.4"
