[package]
name = "cortex_rs"
version = "1.0.0"
edition = "2021"

[lib]
name = "cortex_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["abi3-py310"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
dashmap = "5.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
