[package]
name = "cortex_rs"
version = "1.0.0"
edition = "2021"

[lib]
name = "cortex_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["abi3-py310"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
dashmap = "5.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
z3 = "0.20.0"
aes-gcm = "0.10.3"
rand = "0.10.1"
anyhow = "1.0.102"
blake3 = "1.5.1"
crossbeam-channel = "0.5"
chrono = { version = "0.4", features = ["serde"] }
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
sha3 = "0.10"
hex = "0.4.3"
zenoh = "1.0.0-rc.3"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.11.0"

[[bench]]
name = "vault_benchmark"
harness = false
