[package]
name = "moskv_10k_swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
chrono = "0.4.44"
rand = "0.10.1"
uuid = { version = "1.23.1", features = ["v4"] }
