[package]
name = "bounty-hunter"
version = "0.1.0"
edition = "2021"
description = "C5-REAL bug bounty swarm — 22.5M dispatch/s Rust orchestrator"

[[bin]]
name = "bounty-hunter"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
indicatif = "0.17"
colored = "2"
dashmap = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
rand = "0.8"
tokio-util = "0.7"
num_cpus = "1"

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
strip = true
codegen-units = 1
