[package]
name = "ouroboros-stream"
version = "0.1.0"
edition = "2021"
description = "Ouroboros Stream Kernel - Event-Sourced Agent Pruning"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "fast-rng"] }
tracing = "0.1"
tracing-subscriber = "0.3"
