[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-persist-mtk"
version = "0.1.0"
description = "Minimal Trusted Kernel (MTK): A cryptographic authorizer hook for SQLite to enforce physical boundaries on AI state mutations."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "borjamoskv", email = "borjamoskv@cortex-persist.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/borjamoskv/cortex-persist-mtk"
Repository = "https://github.com/borjamoskv/cortex-persist-mtk.git"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex_persist_mtk"]
