[package]
name = "cortex_ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cortex_ffi"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true }
cortex_rs = { path = "../cortex_rs" }
cortex_chaos = { path = "../cortex_chaos" }
cortex_types = { path = "../cortex_types" }
