[package]
name = "cortex_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rusqlite = { version = "0.31", features = ["load_extension"] }
tract-onnx = "0.21"
ndarray = "0.15"
rand_distr = "0.4"
