[package]
name = "cortex_replay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cortex_types = { path = "../cortex_types" }
cortex_chaos = { path = "../cortex_chaos" }
cortex_rs = { path = "../cortex_rs" }
cortex_hardware_stub = { path = "../cortex_hardware_stub" }
