[package]
name = "artemis-omega"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ethereum Interop (Ω₀: Silicon Truth)
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
anyhow = "1.0"
chrono = "0.4"
dotenv = "0.15"
hex = "0.4"
url = "2.5"

# Local Core Integration
cortex-core = { path = "../cortex-core" }
ethers-flashbots = "0.15.0"
